--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,8 +8,8 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "projects"
-    url: /projects/
+  #- title: "projects"
+  #  url: /projects/
 
   - title: "papers"
     url: /publications/
@@ -17,8 +17,8 @@ main:
   - software: "software"
     url: /software/
 
-  - title: "teaching"
-    url: /teaching/    
+  #- title: "teaching"
+  #  url: /teaching/    
     
   # - title: "blog"
   #  url: /year-archive/
