Try to fix Nature cover image on pubs page and prevent projects content from being duplicated on home page

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "gavilan_porch_crop.jpg"
   name             : "Drew Terasaki Hart"
   pronouns         : "he, él"  
-  bio              : "landscape ecologist, evolutionary biogeographer, global change biologist, conservation scientist, failed farmer"
+  bio              : "landscape ecologist, evolutionary biogeographer, global change biologist, conservation scientist, wannabe farmer"
   location         : "Brisbane, Australia"
   employer         : "CSIRO"
   uri              : "erthward.github.io"
